force-app/main/default/objects/Account/fields/Active_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Active_Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Prospect</label>
    <type>Checkbox</type>
</CustomField>