force-app/main/default/objects/Account/fields/Advance_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Advance_System_ID__c</fullName>
    <label>Advance System ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>