force-app/main/default/objects/Account/fields/Change_Source__c.field-meta.xml
<CustomField>
    <fullName>Change_Source__c</fullName>
    <label>Change Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ucinn_ascendv2__Data_Source</valueSetName>
    </valueSet>
</CustomField>