force-app/main/default/objects/Account/fields/D_B_Tradestyle__c.field-meta.xml
<CustomField>
    <fullName>D_B_Tradestyle__c</fullName>
    <label>D&amp;B Tradestyle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>