force-app/main/default/objects/Account/fields/Fortune_1000_Rank__c.field-meta.xml
<CustomField>
    <fullName>Fortune_1000_Rank__c</fullName>
    <description>Fortune 1000 Ranking from DnB Company Record</description>
    <formula>DNBoptimizer__DnBCompanyRecord__r.DNBoptimizer__Fortune1000Rank__c</formula>
    <label>Fortune 1000 Rank</label>
    <type>Text</type>
</CustomField>