force-app/main/default/objects/Account/fields/Institution_Code__c.field-meta.xml
<CustomField>
    <fullName>Institution_Code__c</fullName>
    <label>Institution Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>