force-app/main/default/objects/Account/fields/LD_USE_DnB_Optimize__c.field-meta.xml
<CustomField>
    <fullName>LD_USE_DnB_Optimize__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used to control which records should be matched with D&amp;B Optimizer</description>
    <inlineHelpText>Field used to control which records should be matched with D&amp;B Optimizer</inlineHelpText>
    <label>Allow D&amp;B Optimizer</label>
    <type>Checkbox</type>
</CustomField>