force-app/main/default/objects/Account/fields/Map2__c.field-meta.xml
<CustomField>
    <fullName>Map2__c</fullName>
    <formula>IMAGE(&quot;https://www.google.com/maps/embed?pb=!4v1641343821345!6m8!1m7!1sk1IpzN5w-AfYe7D0DK-P4A!2m2!1d36.09744534447915!2d-95.87334710686646!3f52.233974!4f0!5f0.7820865974627469&quot;, &quot;Google Maps&quot;)</formula>
    <label>Map2</label>
    <type>Text</type>
</CustomField>