force-app/main/default/objects/Account/fields/Map__c.field-meta.xml
<CustomField>
    <fullName>Map__c</fullName>
    <formula>HYPERLINK(&quot;http://maps.google.com/maps?q=&quot;&amp;ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_Line_1__c &amp; &quot;,+&quot; &amp;
ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_City__c &amp;&quot;+&quot;&amp;ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_State__c&amp; &quot;+&quot; &amp; ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_Postal_Code__c&amp;&quot;&amp;t=m&amp;z=16&quot;,
IMAGE(
&quot;http://maps.google.com/maps/api/staticmap?center=&quot;&amp;ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_Line_1__c&amp;
&quot;,+&quot;&amp;ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_City__c&amp;&quot;+&quot;&amp; ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_State__c&amp;
&quot;+&quot;&amp;ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_Postal_Code__c&amp;
&quot;&amp;zoom=11&amp;format=png&amp;maptype=roadmap&amp;mobile=false&amp;language=English&amp;markers=|color:Green|label:Address|&quot;&amp;ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_Line_1__c&amp;&quot;,+&quot;&amp; ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_City__c&amp;
&quot;+&quot;&amp;ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_State__c&amp;&quot;+&quot;&amp;
ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_Postal_Code__c&amp; &quot;&amp;size=100x100&amp;key=&amp;sensor=false&quot;,&quot;Google Maps&quot;))</formula>
    <label>Map</label>
    <type>Text</type>
</CustomField>