force-app/main/default/objects/Account/fields/NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code__c</fullName>
    <description>Custom NAICS Code Field that will hold the information provided by D&amp;B</description>
    <label>NAICS Code D&amp;B</label>
    <length>8</length>
    <type>Text</type>
</CustomField>