force-app/main/default/objects/Account/fields/NAICS_Description__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Description__c</fullName>
    <description>Custom field that will hold the NAICS Description information provided by D&amp;B.</description>
    <inlineHelpText>Custom field that will hold the NAICS Description information provided by D&amp;B.</inlineHelpText>
    <label>NAICS Description D&amp;B</label>
    <length>120</length>
    <type>Text</type>
</CustomField>