force-app/main/default/objects/Account/fields/nd_5M_Lifetime_Production_Milestone__c.field-meta.xml
<CustomField>
    <fullName>nd_5M_Lifetime_Production_Milestone__c</fullName>
    <label>$5M Lifetime Production Milestone</label>
    <type>Date</type>
</CustomField>