force-app/main/default/objects/Account/fields/nd_Active_Prospect__c.field-meta.xml
<CustomField>
    <fullName>nd_Active_Prospect__c</fullName>
    <formula>IF( nd_RecTypeDeveloperName_F__c == &apos;Household&apos;,
(IF(TEXT(ND_Household_Category__c)== &apos;R2&apos; || TEXT(ND_Household_Category__c)==&apos;AS&apos;, true,false)) ,
 IF( (nd_RecTypeDeveloperName_F__c == &apos;Corporations_and_Organizations&apos; &amp;&amp; ( TEXT(ND_Organization_Prospect_Category__c)== &apos;NA&apos; || 
 TEXT(ND_Organization_Prospect_Category__c)==&apos;AS&apos;)),true ,false)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Prospect</label>
    <type>Checkbox</type>
</CustomField>