force-app/main/default/objects/Account/fields/nd_Display_for_GPO__c.field-meta.xml
<CustomField>
    <fullName>nd_Display_for_GPO__c</fullName>
    <description>Indicator for whether or not the donor&apos;s PRM&apos;s GPO is the same as the user.</description>
    <formula>$User.Id = ucinn_ascendv2__PRM__r.nd_Gift_Planning_Officer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator for whether or not the donor&apos;s PRM&apos;s GPO is the same as the user.</inlineHelpText>
    <label>Display for GPO</label>
    <type>Checkbox</type>
</CustomField>