force-app/main/default/objects/Account/fields/nd_Display_for_Region__c.field-meta.xml
<CustomField>
    <fullName>nd_Display_for_Region__c</fullName>
    <description>Indicator for whether or not the org&apos;s region owner is the same as the user&apos;s group region</description>
    <formula>TEXT(ucinn_ascendv2__PRM__r.ND_Group_Region__c)=TEXT($User.ND_Group_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicator for whether or not the org&apos;s region owner is the same as the user&apos;s group region</inlineHelpText>
    <label>Display for Region</label>
    <type>Checkbox</type>
</CustomField>