force-app/main/default/objects/Account/fields/nd_Giving_Summary_Last_Update_DateValue__c.field-meta.xml
<CustomField>
    <fullName>nd_Giving_Summary_Last_Update_DateValue__c</fullName>
    <formula>DATEVALUE( ucinn_ascendv2__Giving_Summary_Last_Updated__c )</formula>
    <label>Giving Summary Last Update (DateValue)</label>
    <type>Date</type>
</CustomField>