force-app/main/default/objects/Account/fields/nd_Household_FY_Unrestricted_Giving__c.field-meta.xml
<CustomField>
    <fullName>nd_Household_FY_Unrestricted_Giving__c</fullName>
    <formula>ucinn_ascendv2__Primary_Contact__r.nd_FY_Unrestricted_Giving__c +  Secondary_Constituent__r.nd_FY_Unrestricted_Giving__c</formula>
    <label>Household FY Unrestricted Giving</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>