force-app/main/default/objects/Account/fields/ND_Household_Types__c.field-meta.xml
<CustomField>
    <fullName>ND_Household_Types__c</fullName>
    <label>Prospect Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ND_Household_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Prospect_Stage</valueSetName>
    </valueSet>
</CustomField>