force-app/main/default/objects/Account/fields/nd_Institutional_Suffix_Formula__c.field-meta.xml
<CustomField>
    <fullName>nd_Institutional_Suffix_Formula__c</fullName>
    <formula>TEXT(Type) &amp; IF((ucinn_ascendv2__Matching_Ratio__c=0 &amp;&amp; ISBLANK(nd_Suffix_Giving_Societies__c) &amp;&amp; NOT(nd_Active_Prospect__c)),&quot;&quot;,&quot;/&quot;) &amp; IF( ucinn_ascendv2__Matching_Ratio__c&gt;0,&quot;MG&quot;,&quot;&quot;) &amp; IF(ISBLANK(nd_Suffix_Giving_Societies__c),&quot;&quot;,nd_Suffix_Giving_Societies__c)&amp; IF(nd_Active_Prospect__c,&quot; AP&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Institutional Suffix Formula</label>
    <type>Text</type>
</CustomField>