force-app/main/default/objects/Account/fields/ND_Last_Wealth_Rating_Date__c.field-meta.xml
<CustomField>
    <fullName>ND_Last_Wealth_Rating_Date__c</fullName>
    <description>Wealth Last Rating Date field for the organization object; will be set by a flow based on the most recent Wealth Rating record and the ND Wealth rating source priority</description>
    <label>Last Wealth Rating Date</label>
    <type>Date</type>
</CustomField>