force-app/main/default/objects/Account/fields/nd_LastCRDate__c.field-meta.xml
<CustomField>
    <fullName>nd_LastCRDate__c</fullName>
    <description>This field holds the date when was the last contact report record created on that organisation</description>
    <inlineHelpText>This field holds the date when was the last contact report record created on that organisation</inlineHelpText>
    <label>Last Contact Report Date</label>
    <type>Date</type>
</CustomField>