force-app/main/default/objects/Account/fields/nd_Legacy_Prospect_ID__c.field-meta.xml
<CustomField>
    <fullName>nd_Legacy_Prospect_ID__c</fullName>
    <label>Legacy Prospect ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>