force-app/main/default/objects/Account/fields/nd_Name_and_ID__c.field-meta.xml
<CustomField>
    <fullName>nd_Name_and_ID__c</fullName>
    <formula>Name &amp; &quot; - &quot; &amp; ucinn_ascendv2__Donor_ID__c &amp; &quot; - &quot; &amp; nd_Institutional_Suffix_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name and ID</label>
    <type>Text</type>
</CustomField>