force-app/main/default/objects/Account/fields/nd_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>nd_Net_Worth__c</fullName>
    <description>Net worth field for the organization object; will be set by a flow based on the most recent Wealth Rating record and the ND Wealth rating source priority</description>
    <label>Net Worth</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>