force-app/main/default/objects/Account/fields/ND_Organization_Prospect_Category__c.field-meta.xml
<CustomField>
    <fullName>ND_Organization_Prospect_Category__c</fullName>
    <label>Organization Prospect Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GP</fullName>
                <default>true</default>
                <label>General Pool</label>
            </value>
            <value>
                <fullName>LE</fullName>
                <label>Leads</label>
            </value>
            <value>
                <fullName>AS</fullName>
                <label>Assigned</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <label>Need Assignment</label>
            </value>
            <value>
                <fullName>RE</fullName>
                <label>Removed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>