force-app/main/default/objects/Account/fields/ND_Organization_Prospect_Removal_Reason__c.field-meta.xml
<CustomField>
    <fullName>ND_Organization_Prospect_Removal_Reason__c</fullName>
    <inlineHelpText>Has been removed from the leadership prospecting pool &amp; should not be contacted by ND. The Prospect Stage clarifies the reason for removal.</inlineHelpText>
    <label>Prospect Removal Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>