force-app/main/default/objects/Account/fields/ND_Organization_Prospect_Stage__c.field-meta.xml
<CustomField>
    <fullName>ND_Organization_Prospect_Stage__c</fullName>
    <label>Organization Prospect Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ND_Organization_Prospect_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NR</fullName>
                <default>true</default>
                <label>Never Reviewed</label>
            </value>
            <value>
                <fullName>N1</fullName>
                <label>Fundraiser Disqualified</label>
            </value>
            <value>
                <fullName>I</fullName>
                <label>Identify</label>
            </value>
            <value>
                <fullName>Q</fullName>
                <label>Qualify</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Cultivate</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Solicit</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Maintain/Steward</label>
            </value>
            <value>
                <fullName>F3</fullName>
                <label>Rising Star</label>
            </value>
            <value>
                <fullName>LQ</fullName>
                <label>Liquidity</label>
            </value>
            <value>
                <fullName>DS</fullName>
                <label>Discovery</label>
            </value>
            <value>
                <fullName>F1</fullName>
                <label>Timing Not Right</label>
            </value>
            <value>
                <fullName>F2</fullName>
                <label>ND Sensitive Issue - University Related</label>
            </value>
            <value>
                <fullName>R3</fullName>
                <label>Portfolio Downsize</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>