force-app/main/default/objects/Account/fields/nd_Primary_Const_and_Inst_Suffix__c.field-meta.xml
<CustomField>
    <fullName>nd_Primary_Const_and_Inst_Suffix__c</fullName>
    <formula>ucinn_ascendv2__Primary_Contact__r.nd_Name_and_ID__c</formula>
    <label>Primary Const. and Inst. Suffix</label>
    <type>Text</type>
</CustomField>