force-app/main/default/objects/Account/fields/nd_Primary_Constituent_Business_Address__c.field-meta.xml
<CustomField>
    <fullName>nd_Primary_Constituent_Business_Address__c</fullName>
    <formula>IF(ISBLANK( ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Presidential_Other_Address_Formula__c ),null,
HYPERLINK(&quot;https://www.google.com/maps/place/&quot; &amp; ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Presidential_Other_Street_v1__c &amp; &quot;,+&quot; &amp; ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Presidential_Other_City__c &amp;&quot;,+&quot;&amp; ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Presidential_Other_State__c &amp;&quot;,+&quot;&amp; ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Presidential_Other_Postal_Code__c
,ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Presidential_Other_Address_Formula__c, &quot;_blank&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Constituent Business Address</label>
    <type>Text</type>
</CustomField>