force-app/main/default/objects/Account/fields/ND_Primary_Constituent_Home_Addr_Zip__c.field-meta.xml
<CustomField>
    <fullName>ND_Primary_Constituent_Home_Addr_Zip__c</fullName>
    <formula>IF(ISBLANK( ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_Formula__c ),null,
ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_Postal_Code__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Constituent Home Address Zip</label>
    <type>Text</type>
</CustomField>