force-app/main/default/objects/Account/fields/nd_Primary_Constituent_Home_Address__c.field-meta.xml
<CustomField>
    <fullName>nd_Primary_Constituent_Home_Address__c</fullName>
    <formula>IF(ISBLANK( ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Presidential_Mailing_Address_Formula__c),null,
HYPERLINK(&quot;https://www.google.com/maps/place/&quot; &amp; ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Presidential_Mailing_Street_v1__c &amp; &quot;,+&quot; &amp; ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Presidential_Mailing_City__c &amp;&quot;,+&quot;&amp; ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Presidential_Mailing_State__c &amp;&quot;,+&quot;&amp; ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Presidential_Mailing_Postal_Code__c
,ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Presidential_Mailing_Address_Formula__c, &quot;_blank&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Constituent Home Address</label>
    <type>Text</type>
</CustomField>