force-app/main/default/objects/Account/fields/ND_PRM_Agent__c.field-meta.xml
<CustomField>
    <fullName>ND_PRM_Agent__c</fullName>
    <description>Formula field used to get the name of the PRM. Created to expose this field on the Donor Display in gift processing.</description>
    <formula>ucinn_ascendv2__PRM__r.FirstName &amp; &quot; &quot; &amp; ucinn_ascendv2__PRM__r.LastName</formula>
    <label>PRM Agent</label>
    <type>Text</type>
</CustomField>