force-app/main/default/objects/Account/fields/ND_Prospect_Priority__c.field-meta.xml
<CustomField>
    <fullName>ND_Prospect_Priority__c</fullName>
    <label>Prospect Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>None</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>High</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Medium</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>