force-app/main/default/objects/Account/fields/ND_Re_Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>ND_Re_Evaluation_Date__c</fullName>
    <inlineHelpText>Future date a household should be reviewed for potential leadership assignment and engagement</inlineHelpText>
    <label>Re-Evaluation Date</label>
    <type>Date</type>
</CustomField>