force-app/main/default/objects/Account/fields/nd_RecTypeDeveloperName_F__c.field-meta.xml
<CustomField>
    <fullName>nd_RecTypeDeveloperName_F__c</fullName>
    <description>Exposes the record type developer name. Used for back end processes.  Not user facing field.</description>
    <formula>RecordType.DeveloperName</formula>
    <label>RecType DeveloperName</label>
    <type>Text</type>
</CustomField>