force-app/main/default/objects/Account/fields/ND_Research_Date__c.field-meta.xml
<CustomField>
    <fullName>ND_Research_Date__c</fullName>
    <inlineHelpText>Date a Prospect Management Researcher or Consultant estimated a wealth rating for a household</inlineHelpText>
    <label>Research Date</label>
    <type>Date</type>
</CustomField>