force-app/main/default/objects/Account/fields/nd_Secondary_Const_and_Inst_Suffix__c.field-meta.xml
<CustomField>
    <fullName>nd_Secondary_Const_and_Inst_Suffix__c</fullName>
    <formula>Secondary_Constituent__r.nd_Name_and_ID__c</formula>
    <label>Secondary Const. and Inst. Suffix</label>
    <type>Text</type>
</CustomField>