force-app/main/default/objects/Account/fields/nd_Stewardship_Classification__c.field-meta.xml
<CustomField>
    <fullName>nd_Stewardship_Classification__c</fullName>
    <label>Stewardship Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Principal Donor</fullName>
            </value>
            <value>
                <fullName>Key Donor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>