force-app/main/default/objects/Account/fields/nd_Stewardship_Lead__c.field-meta.xml
<CustomField>
    <fullName>nd_Stewardship_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stewardship Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>