force-app/main/default/objects/Account/fields/nd_Stewardship_Plan_Last_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>nd_Stewardship_Plan_Last_Review_Date__c</fullName>
    <label>Stewardship Plan Last Review Date</label>
    <type>Date</type>
</CustomField>