force-app/main/default/objects/Account/fields/nd_Suffix_Giving_Societies__c.field-meta.xml
<CustomField>
    <fullName>nd_Suffix_Giving_Societies__c</fullName>
    <label>Suffix Giving-Societies</label>
    <length>255</length>
    <type>Text</type>
</CustomField>