force-app/main/default/objects/Account/fields/nd_Transformative_Gift_Prospect__c.field-meta.xml
<CustomField>
    <fullName>nd_Transformative_Gift_Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transformative Gift Prospect</label>
    <type>Checkbox</type>
</CustomField>