force-app/main/default/objects/Account/fields/ND_User_PRM__c.field-meta.xml
<CustomField>
    <fullName>ND_User_PRM__c</fullName>
    <formula>IF( ucinn_ascendv2__PRM__c = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User PRM</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>