force-app/main/default/objects/Account/fields/ND_Wealth_Rating__c.field-meta.xml
<CustomField>
    <fullName>ND_Wealth_Rating__c</fullName>
    <description>Field to store a prioritized wealth rating value from the wealth rating object.  Updated by a flow.</description>
    <label>ND Wealth Rating</label>
    <length>100</length>
    <type>Text</type>
</CustomField>