force-app/main/default/objects/Account/fields/nd_Wealth_Rating_Currency__c.field-meta.xml
<CustomField>
    <fullName>nd_Wealth_Rating_Currency__c</fullName>
    <formula>VALUE( ND_Wealth_Rating__c )</formula>
    <label>Wealth Rating (Currency)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>