force-app/main/default/objects/Account/fields/Online_Only__c.field-meta.xml
<CustomField>
    <fullName>Online_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this checkbox to indicate when a business does not have a physical address.</description>
    <inlineHelpText>Use this checkbox to indicate when a business does not have a physical address.</inlineHelpText>
    <label>Online Only</label>
    <type>Checkbox</type>
</CustomField>