force-app/main/default/objects/Account/fields/Primary_Constituent_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Primary_Constituent_Address_Type__c</fullName>
    <formula>Text(ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Constituent Address Type</label>
    <type>Text</type>
</CustomField>