force-app/main/default/objects/Account/fields/Primary_Constituent_Preferred_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Constituent_Preferred_Address__c</fullName>
    <formula>IF(ISBLANK( ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_Formula__c ),null,
HYPERLINK(&quot;https://www.google.com/maps/place/&quot; &amp; ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_Line_1__c &amp; &quot;,+&quot; &amp; ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_City__c &amp;&quot;,+&quot;&amp; ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_State__c &amp;&quot;,+&quot;&amp; ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_Postal_Code__c
,ucinn_ascendv2__Primary_Contact__r.ucinn_ascendv2__Preferred_Address_Formula__c, &quot;_blank&quot;)
)</formula>
    <label>Primary Constituent Preferred Address</label>
    <type>Text</type>
</CustomField>