force-app/main/default/objects/Account/fields/Secondary_Constituent__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Constituent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Constituent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Household (Secondary)</relationshipLabel>
    <relationshipName>Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>