force-app/main/default/objects/Account/fields/sfl_load_process_id__c.field-meta.xml
<CustomField>
    <fullName>sfl_load_process_id__c</fullName>
    <description>Used by development&apos;s load process. This field identifies multiple records that were loaded in the same bulk load job. This is an automated field and different from how sfl_load_group_id is used.</description>
    <inlineHelpText>Used by development&apos;s load process. This field identifies multiple records that were loaded in the same bulk load job. This is an automated field and different from how sfl_load_group_id is used.</inlineHelpText>
    <label>sfl load process id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>