force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Defunct</label>
            </value>
            <value>
                <fullName>X</fullName>
                <label>Purgeable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>