force-app/main/default/objects/Account/fields/TracHier__Domain__c.field-meta.xml
<CustomField>
    <fullName>TracHier__Domain__c</fullName>
    <externalId>true</externalId>
    <label>Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>