force-app/main/default/objects/Account/fields/ucinn_ascendv2__Amount_of_First_Pledge_Payment__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_of_First_Pledge_Payment__c</fullName>
    <label>Amount of First Pledge Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>