force-app/main/default/objects/Account/fields/ucinn_ascendv2__Amount_of_Largest_Gift__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Amount_of_Largest_Gift__c</fullName>
    <label>Amount of Largest Gift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>